# dcma

./: CHANGELOG.md  README.md  TODO  cmd_minio_docker.sh  minio.Dockerfile  pyproject.toml
.github/workflows/: ci-cd.yml
data/.minio.sys/: format.json
data/.minio.sys/tmp/.trash/10e672c9-eb95-43f1-b267-3396675350df/: xl.meta.bkp
data/.minio.sys/tmp/.trash/3ea32546-ad37-44af-9e66-510b5211f4be/: xl.meta.bkp
data/.minio.sys/tmp/.trash/4bcb1fcd-2593-472a-a44c-830c3b15fc26/: xl.meta.bkp
data/.minio.sys/tmp/.trash/4e3260a1-6593-419d-b4f8-1ca54ec9a16c/: xl.meta.bkp
data/.minio.sys/tmp/.trash/5a222077-e723-493d-8a70-498714565301/: xl.meta.bkp
data/.minio.sys/tmp/.trash/debd76d1-494b-422b-a34c-8d623e002244/: xl.meta.bkp
docs/: Makefile  conf.py  example.ipynb  make.bat
src/dcma/: Dockerfile  TODO  __init__.py  __main__.py  configuration_algo.py  data_ingest.py  data_ingest_cmd.sh  explore.py  flask-api.yaml  inference.py  minio_client.py  mlflow.Dockerfile  mlflow_cmd.sh  mlflow_wrapper.py  plot_graph.py  preprocess.py  preprocess_cli.py  preprocess_cmd.sh  requirements_api.txt  train.py  train_cli.py  train_cli_cmd.sh  transform.py  transform_cli.py  transform_cli_cmd.sh  utils.py
src/dcma/mlruns/0/: meta.yaml
src/dcma/model_store/: conversion_classifier_metrics.json
tests/: test.py  test_dcma.py  test_prediction_request.py
